# embedded-temp-monitor

./: CMakeLists.txt  README.md
.github/workflow/: ci.yml
include/: adc_hal.hpp  alarm_manager.hpp  temp_sensor.hpp
src/: adc_hal.cpp  alarm_manager.cpp  main.cpp  temp_sensor.cpp
test/: test_main.cpp
